# pico-3D-renderer

./: CMakeLists.txt  README.md  extract_from_obj.py  index.cpp  model.c  model.h
